--- a/Views/Category/Show.cshtml
+++ b/Views/Category/Show.cshtml
@@ -1,22 +1,34 @@
 ﻿@model ProjectDAW.ViewModels.Category
 
 @{
-    ViewBag.Title = "Show";
+    ViewBag.Title = $"Category - {Model.Name}";
 }
 
-@Model.Name
-@Model.Description
-
-
-@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })
-
-@using (Html.BeginForm("Delete", "Category", FormMethod.Post))
+@using (Html.BeginForm("Delete", "Category", FormMethod.Post, new { @id = "DeleteCategoryForm", @class = "form-inline" }))
 {
     @Html.HttpMethodOverride(HttpVerbs.Delete)
     @Html.AntiForgeryToken()
-    <input type="hidden" name="id" value="@Model.CategoryId"/>
-    //@Html.HiddenFor(model => model.CategoryId)
-    <button type="submit" class="btn btn-danger">Delete Category</button>
+    <input type="hidden" name="id" value="@Model.CategoryId" />
 }
-<h2>Show</h2>
+
+<div class="panel panel-default">
+    <div class="panel-heading">@Model.Name</div>
+    <div class="panel-body">@Model.Description</div>
+    <div class="panel-footer">
+        @Html.ActionLink("New Post", "Create", "Post", new { id = Model.CategoryId }, new { @class = "btn btn-success" })
+        @Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId }, new { @class = "btn btn-primary" })
+        <button type="submit" class="btn btn-danger" onclick="document.getElementById('DeleteCategoryForm').submit();">Delete Category</button>
+    </div>
+</div>
+
+@foreach (var post in Model.CategoryPosts)
+{
+    <div class="panel panel-default">
+        <div class="panel-heading">@Html.ActionLink(post.Title, "Show", "Post", new { id = post.PostId }, new { })</div>
+        <div class="panel-body">@post.Content</div>
+    </div>
+}
+
+
+
 
