--- a/Views/Post/Show.cshtml
+++ b/Views/Post/Show.cshtml
@@ -16,11 +16,15 @@
     <div class="panel-heading">@Model.Title @Html.ActionLink("Back to category", "Show", "Category", new { id = Model.CategoryId }, new { @class = "btn btn-primary" })</div>
     <div class="panel-body">@Model.Content</div>
     <div class="panel-footer">
-        @*Aici trb sa faci tu metoda a.i Category/Show*@
-        @Html.ActionLink("Add Comment", "Create", "Comment", new { id = Model.PostId }, new { @class = "btn btn-success" })
+        @Html.ActionLink("Add Comment", "Create", "Comment", new { postId = Model.PostId }, new { @class = "btn btn-success" })
         @Html.ActionLink("Edit Post", "Edit", new { id = Model.PostId }, new { @class = "btn btn-primary" })
         <button type="submit" class="btn btn-danger" onclick="document.getElementById('DeletePostForm').submit();">Delete Post</button>
     </div>
 </div>
 
-@*Aici adauga commentarile*@
+@foreach (var comment in Model.Comments)
+{
+    <div class="panel panel-default">
+        <div class="panel-heading">@Html.ActionLink(comment.Content, "Show", "Comment", new { id = comment.CommentId }, new { })</div>
+    </div>
+}
