--- a/Views/Category/Edit.cshtml
+++ b/Views/Category/Edit.cshtml
@@ -1,19 +1,36 @@
 ﻿@model ProjectDAW.ViewModels.Category
 
+<h2>@ViewBag.Title</h2>
+
 @using (Html.BeginForm("CreateOrEdit", "Category", FormMethod.Post))
 {
-    if (Model.CategoryId != 0)
-    {
-        @Html.HiddenFor(m => m.CategoryId)
-    }
-    @Html.LabelFor(m => m.Name)
-    @Html.EditorFor(m => m.Name)
-    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+    @Html.AntiForgeryToken()
 
-    @Html.LabelFor(m => m.Description)
-    @Html.EditorFor(m => m.Description)
-    @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.CategoryId)
 
-    <button type="submit">@ViewBag.SubmitAction</button>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
 }
 
